--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
     "build": "vite build"
   },
   "dependencies": {
+    "@vitejs/plugin-react": "^4.0.0",
     "axios": "^1.3.6",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-router-dom": "^6.10.0"
   },
   "devDependencies": {
-    "vite": "^1.0.0-rc.13",
-    "vite-plugin-react": "^4.0.0"
+    "vite": "^4.3.9"
   }
 }
